force-app/main/default/email_log_auditor/objects/EmailLogFile__c/EmailLogFile__c.object-meta.xml
<CustomObject>
    <description>Registry of Email Log files downloaded from Salesforce internal Email Log endpoint. Used for cache de-duplication and batch processing tracking.</description>
    <label>Email Log File</label>
    <nameField>
        <label>Email Log File Name</label>
        <type>AutoNumber</type>
        <displayFormat>ELF-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Email Log Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>