force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Id of the ContentDocument storing the downloaded CSV/ZIP payload.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>