force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/DownloadedDate__c.field-meta.xml
<CustomField>
    <fullName>DownloadedDate__c</fullName>
    <description>UTC datetime when this log file was downloaded by the acquisition service.</description>
    <label>Downloaded Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>