force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <description>Number of CSV rows that failed parsing or could not be matched (also written to AuditLogEntry__c).</description>
    <label>Error Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>