force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <description>The 0BRC-prefixed Salesforce internal Email Log file identifier. Used as the cache de-duplication key.</description>
    <externalId>true</externalId>
    <label>File Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>