force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Human-readable label of the log file as displayed in the Salesforce Setup Email Log page.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>