force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/LastProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>LastProcessedDate__c</fullName>
    <description>UTC datetime when the batch processor finished its most recent processing pass on this file.</description>
    <label>Last Processed Date</label>
    <type>DateTime</type>
</CustomField>