force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/LogSearchId__c.field-meta.xml
<CustomField>
    <fullName>LogSearchId__c</fullName>
    <description>Salesforce-issued log_search_id returned in the POST response from editEmailLogSearch.apexp. Used by EmailLogPollRequest__c records to poll the overview page for readiness.</description>
    <label>Log Search Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>