force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/MatchCount__c.field-meta.xml
<CustomField>
    <fullName>MatchCount__c</fullName>
    <description>Number of CSV rows successfully matched to an EmailMessage during batch processing.</description>
    <label>Match Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>