force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/ProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessingStatus__c</fullName>
    <defaultValue>"New"</defaultValue>
    <description>State of the file in the processing pipeline. New → Processing → Processed | Failed.</description>
    <label>Processing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>RequestTimedOut</fullName>
                <label>Request Timed Out</label>
            </value>
            <value>
                <fullName>RequestFailed</fullName>
                <label>Request Failed</label>
            </value>
            <value>
                <fullName>ReadyToDownload</fullName>
                <label>Ready To Download</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>