force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/RequestedEndDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedEndDate__c</fullName>
    <description>UTC end of the log window that was requested via submitRequestCallouts(). Null for files downloaded directly (not via auto-request).</description>
    <label>Requested End Date</label>
    <type>DateTime</type>
</CustomField>