force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/RequestedStartDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedStartDate__c</fullName>
    <description>UTC start of the log window that was requested via submitRequestCallouts(). Null for files downloaded directly (not via auto-request).</description>
    <label>Requested Start Date</label>
    <type>DateTime</type>
</CustomField>