force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/RequestParams__c.field-meta.xml
<CustomField>
    <fullName>RequestParams__c</fullName>
    <description>JSON snapshot of the parameters used when submitting the log request: {"direction":"Outbound","emailFilter":null}. Used by retryProcessing() to re-enqueue RequestNowJob with the original parameters. Null for non-request-origin rows.</description>
    <label>Request Params</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>