force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/RowCount__c.field-meta.xml
<CustomField>
    <fullName>RowCount__c</fullName>
    <description>Total number of CSV rows in this log file (set by batch processor).</description>
    <label>Row Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>