force-app/main/default/email_log_auditor/objects/EmailLogFile__c/fields/ServletPath__c.field-meta.xml
<CustomField>
    <fullName>ServletPath__c</fullName>
    <description>Relative path to the servlet endpoint used to download this log file (captured at list time for later download).</description>
    <label>Servlet Path</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>