force-app/main/default/email_log_auditor/objects/EmailLogFile__c/validationRules/ProcessedRequiresContentDocument.validationRule-meta.xml
<ValidationRule>
    <fullName>ProcessedRequiresContentDocument</fullName>
    <active>true</active>
    <description>A file cannot be marked Processed unless its ContentDocumentId__c has been set.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(ProcessingStatus__c, "Processed"),
    ISBLANK(ContentDocumentId__c)
)</errorConditionFormula>
    <errorMessage>Processing Status cannot be set to Processed when no Content Document is attached.</errorMessage>
</ValidationRule>